partial/force-app/main/default/objects/Assignment_Rule__c/Assignment_Rule__c.object-meta.xml
<CustomObject>
    <label>Assignment Rule</label>
    <nameField>
        <displayFormat>AR#{00000}</displayFormat>
        <label>Lead Assignment Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>