partial/force-app/main/default/objects/Assignment_Rule__c/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buying</fullName>
            </value>
            <value>
                <fullName>Selling</fullName>
            </value>
            <value>
                <fullName>Letting</fullName>
            </value>
            <value>
                <fullName>Renting</fullName>
            </value>
            <value>
                <fullName>Buying UK</fullName>
            </value>
            <value>
                <fullName>Primary Sell UK</fullName>
            </value>
            <value>
                <fullName>Rental UK</fullName>
            </value>
            <value>
                <fullName>Secondary Sell UK</fullName>
            </value>
            <value>
                <fullName>Tenancy UK</fullName>
            </value>
            <value>
                <fullName>Instant Valuation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>