partial/force-app/main/default/objects/Assignment_Rule__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GB</fullName>
            </value>
            <value>
                <fullName>SG</fullName>
            </value>
            <value>
                <fullName>UAE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>