partial/force-app/main/default/objects/Assignment_Rule__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>View Interest</fullName>
            </value>
            <value>
                <fullName>View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>