partial/force-app/main/default/objects/Assignment_Rule__c/fields/OfficeId__c.field-meta.xml
<CustomField>
    <fullName>OfficeId__c</fullName>
    <label>OfficeId</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>