partial/force-app/main/default/objects/Assignment_Rule__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Postal Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CR2 6XH</fullName>
            </value>
            <value>
                <fullName>EC1A 1AA</fullName>
            </value>
            <value>
                <fullName>EC1A 1BB</fullName>
            </value>
            <value>
                <fullName>EC3N 4AB</fullName>
            </value>
            <value>
                <fullName>GU16 7HF</fullName>
            </value>
            <value>
                <fullName>IG117RN</fullName>
            </value>
            <value>
                <fullName>IG11 7RY</fullName>
            </value>
            <value>
                <fullName>L1 8JQ</fullName>
            </value>
            <value>
                <fullName>PH49</fullName>
            </value>
            <value>
                <fullName>PO16 7GZ</fullName>
            </value>
            <value>
                <fullName>SW1A 0AA</fullName>
            </value>
            <value>
                <fullName>SW1A 0PW</fullName>
            </value>
            <value>
                <fullName>SW1A 1AA</fullName>
            </value>
            <value>
                <fullName>SW1A 2AA</fullName>
            </value>
            <value>
                <fullName>SW1W 0NY</fullName>
            </value>
            <value>
                <fullName>WC2N 5DU</fullName>
            </value>
            <value>
                <fullName>YO1 7JF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>