partial/force-app/main/default/objects/Assignment_Rule__c/fields/Public_Group__c.field-meta.xml
<CustomField>
    <fullName>Public_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Public Group</label>
    <referenceTo>Public_Group__c</referenceTo>
    <relationshipName>Opportunity_Assignment_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>