partial/force-app/main/default/objects/Assignment_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>Public_Group__c</columns>
    <columns>OfficeId__c</columns>
    <columns>Active__c</columns>
    <columns>Business_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>