partial/force-app/main/default/objects/Assignment_Rule__c/listViews/Lead_Assignment_Rules.listView-meta.xml
<ListView>
    <fullName>Lead_Assignment_Rules</fullName>
    <columns>NAME</columns>
    <columns>Public_Group__c</columns>
    <columns>OfficeId__c</columns>
    <columns>Active__c</columns>
    <columns>Business_Type__c</columns>
    <columns>Object__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object__c</field>
        <operation>equals</operation>
        <value>Lead</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Lead Assignment Rules</label>
</ListView>