partial/force-app/main/default/objects/Assignment_Rule__c/listViews/View_Interest_Assignment_Rules.listView-meta.xml
<ListView>
    <fullName>View_Interest_Assignment_Rules</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>Public_Group__c</columns>
    <columns>Active__c</columns>
    <columns>Country__c</columns>
    <columns>Business_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object__c</field>
        <operation>equals</operation>
        <value>View Interest</value>
    </filters>
    <label>View Interest Assignment Rules</label>
</ListView>